syntax = "proto3";

package todo;

option go_package = "github.com/xxii22w/grpc-example/module2-todo/proto";

service TodoService {
    rpc AddTask (AddTaskRequest) returns (AddTaskResponse);
    rpc CompleteTask (CompleteTaskRequest) returns (CompleteTaskResponse);
    rpc ListTasks (ListTasksequest) returns (ListTasksResponse);
}

message AddTaskRequest {
    string task = 1;
}

message AddTaskResponse {
    string id = 1;
}

message CompleteTaskRequest {
    string id = 1;
}

message CompleteTaskResponse {
}

message ListTasksequest {
}

message ListTasksResponse {
    repeated Task tasks = 1;
}

message Task {
    string id = 1;
    string task = 2;
}